Ver. 3.7
    - Feature: Added driver version both for mlnx_ofed and inbox
               New field: Driver
    - Feature: Added Link cabability and status PCI generation identification.
               LnkCapSpeed now has Gx suffix
Ver. 3.6
    - Feature: Added traffic view
               New fields are: TX_bps, RX_bps
               Limitation: Partial support on LAG interfaces.
                           Doesen`t accoutns DPDK handled traffic
    - Fixed bug: Fixed RoCEstat for LAG devices
    - Fixed bug: fixed MST start/stop behaviour. It'll be left in same state as it was before lshca execution.
    - Fixed bug: RoCEstat output printed correctly also for 'all' view
    - Fixed bug: Fixed VF display over PF with multiple ports
    - Fixed bug: Correctly handle inbox driver
Ver. 3.5
    - Feature: Added cable view.
               New field are: CblPN, CblSN, CblLng, PhyLinkStat, PhyLnkSpd, PhyAnalisys
    - Feature: Added ROCE Lossy bitmap. This allows understanging what's missconfigured
    - Feature: Added lossless identification for bond interfaces
    - Feature: Added Python 3 support
    - Fixed bug: Fixed recording bugs
    - Fixed bug: Fixed LnkStat elastic
    - Fixed bug: Stopped ROCE fields query if not required
Ver. 3.4
    - Feature: Added multiple improvements in bonding display and errors
        - shows bond type
        - master bond speed based speeds of slaves
        - shows issues with slaves if bond type is 802.3ad
    - Feature: if no HCAs exists, shows user friendly message or empty json
    - Change: if no HCAs exists, exits without error
Ver. 3.3
    - Feature: Adjusted project for PyPI publishing
Ver. 3.2
    - Fixed bug: set default shell to bash. Comes to fix execution on Ubuntu
    - Fixed bug: fixed bond naming identification
Ver. 3.1
    - Feature: Added elastic output option. It eliminates meaningless fields from human readable output